--- a/config/open_jdk_jre.yml
+++ b/config/open_jdk_jre.yml
@@ -22,19 +22,19 @@ jre:
 memory_calculator:
   version: 2.+
   repository_root: "{default.repository.root}/memory-calculator/{platform}/{architecture}"
-  stack_threads: 300
+  stack_threads: 
   memory_sizes:
     heap: 
     metaspace: 64m..
     native: 
     permgen: 64m..
-    stack: 228k..
+    stack: 
   memory_heuristics:
-    heap: 65
+    heap: 75
     metaspace: 10
-    native: 15
+    native: 10
     permgen: 10
-    stack: 10
+    stack: 5
   memory_initials:
     heap: 100%
     metaspace: 100%
